--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>私の自己紹介</title>
+  <link href="https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&display=swap" rel="stylesheet">
   <style>
+    body {
+      font-family: 'Hachi Maru Pop', cursive;
+    }
     img {
       max-width: 20%;
     }
